<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PatAdd</class>
 <widget class="QDialog" name="PatAdd">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>350</width>
    <height>550</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QDialog
{
	background-color: rgb(255, 255, 255);
}</string>
  </property>
  <widget class="QWidget" name="horizontalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>100</x>
     <y>460</y>
     <width>231</width>
     <height>51</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QPushButton" name="refuse">
      <property name="font">
       <font>
        <family>Snap ITC</family>
        <pointsize>16</pointsize>
       </font>
      </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
{
	font: 16pt &quot;Snap ITC&quot;;
}
QPushButton
{
	font: 16pt &quot;Snap ITC&quot;;

	background-color: rgb(255, 255, 255);
	color:rgb(0, 85, 255) ;
	border-color: rgb(0,85,255);
	border-style: solid 5px;
	border : 1px solid rgb(0,85,255);
	border-radius: 10px;
}
QPushButton:hover
{
border : 2px solid rgb(0,0,255);
color : rgb(0, 0, 255);
}
</string>
      </property>
      <property name="text">
       <string>Refuse</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="accepeted">
      <property name="font">
       <font>
        <family>Snap ITC</family>
        <pointsize>16</pointsize>
       </font>
      </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
{
	/*font: 16pt &quot;Snap ITC&quot;;*/
}
QPushButton
{
	color: rgb(255, 255, 255);
	background-color: rgb(0, 85, 255) ;
	border-radius: 10px;
	font: 16pt &quot;Snap ITC&quot;;
}
QPushButton:hover
{
	/*background-color: rgb(255, 0, 127);*/
	background-color: rgb(255, 255, 255);
	color:  rgb(0, 85, 255) ;
	border-color:rgb(0, 85, 255) ;
	border-style: solid 5px;
	border : 1px solid rgb(0, 85, 255) ;
	border-radius: 10px;
}
</string>
      </property>
      <property name="text">
       <string>Accepted</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QLabel" name="label_3">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>20</y>
     <width>261</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 16pt &quot;Snap ITC&quot;;</string>
   </property>
   <property name="text">
    <string>Insert a new Patient</string>
   </property>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>80</y>
     <width>311</width>
     <height>371</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="label_2">
      <property name="styleSheet">
       <string notr="true">font: 16pt &quot;Snap ITC&quot;;</string>
      </property>
      <property name="text">
       <string>Number (PAT) :</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="lineEdit">
      <property name="styleSheet">
       <string notr="true">QLineEdit
{
	border-top:none;
	border-rigth:none;
	border-left:none;	
	border-bottom:1px solid skyblue;
	font: 11pt &quot;Segoe Script&quot;;
}</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label_4">
      <property name="styleSheet">
       <string notr="true">font: 16pt &quot;Snap ITC&quot;;</string>
      </property>
      <property name="text">
       <string>Name :</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="lineEdit_3">
      <property name="styleSheet">
       <string notr="true">QLineEdit
{
	border-top:none;
	border-rigth:none;
	border-left:none;	
	border-bottom:1px solid skyblue;
	font: 11pt &quot;Segoe Script&quot;;
}</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label">
      <property name="font">
       <font>
        <family>Snap ITC</family>
        <pointsize>16</pointsize>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">font: 16pt &quot;Snap ITC&quot;;</string>
      </property>
      <property name="text">
       <string>Address :</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="lineEdit_2">
      <property name="styleSheet">
       <string notr="true">QLineEdit
{
	border-top:none;
	border-rigth:none;
	border-left:none;	
	border-bottom:1px solid skyblue;
	font: 11pt &quot;Segoe Script&quot;;
}</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="Line" name="line">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>50</y>
     <width>361</width>
     <height>31</height>
    </rect>
   </property>
   <property name="orientation">
    <enum>Qt::Horizontal</enum>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
